[package]
name = "http-tunnel-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
httparse = "1.9.4"
rand = "0.8.5"
rustls = { version = "0.23.10", default-features = false,features=["tls12", "logging"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
toml = "0.8.14"
log = "0.4.22"
humantime-serde = "1.0"
env_logger = "0.11.3"
hickory-resolver = "0.24.1"

